3. Project/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: rela
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      kind: Gateway
  hostnames:
    - backend.rela.farhansyah.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rela-backend-service
          namespace: rela
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: rela
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      kind: Gateway
  hostnames:
    - frontend.rela.farhansyah.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rela-frontend-service
          port: 80
          namespace: rela
